--- a/src/CashBatch.Desktop/CashBatch.Desktop.csproj
+++ b/src/CashBatch.Desktop/CashBatch.Desktop.csproj
@@ -24,6 +24,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
   <ItemGroup>
