--- a/src/CashBatch.Reporting/CashBatch.Reporting.csproj
+++ b/src/CashBatch.Reporting/CashBatch.Reporting.csproj
@@ -6,7 +6,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="QuestPDF" Version="2025.7.3" />
+    <PackageReference Include="PdfSharpCore" Version="1.3.66" />
   </ItemGroup>
 
   <PropertyGroup>
